# go/model_response_auth2.go
@@ -1,0 +1,42 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Flow Learning - OpenAPI 3.1
+ *
+ * api for flow learning
+ *
+ * API version: 1.0.0
+ * Contact: floTeam@gmail.com
+ */
+
+package openapi
+
+
+
+
+type ResponseAuth2 struct {
+
+	IsAuth bool `json:"isAuth"`
+
+	Role int32 `json:"role"`
+}
+
+// AssertResponseAuth2Required checks if the required fields are not zero-ed
+func AssertResponseAuth2Required(obj ResponseAuth2) error {
+	elements := map[string]interface{}{
+		"isAuth": obj.IsAuth,
+		"role": obj.Role,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertResponseAuth2Constraints checks if the values respects the defined constraints
+func AssertResponseAuth2Constraints(obj ResponseAuth2) error {
+	return nil
+}
