# go/model_response_auth4.go
@@ -1,0 +1,32 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Flow Learning - OpenAPI 3.1
+ *
+ * api for flow learning
+ *
+ * API version: 1.0.0
+ * Contact: floTeam@gmail.com
+ */
+
+package openapi
+
+
+
+
+type ResponseAuth4 struct {
+
+	IsAuth bool `json:"isAuth,omitempty"`
+
+	Error bool `json:"error,omitempty"`
+}
+
+// AssertResponseAuth4Required checks if the required fields are not zero-ed
+func AssertResponseAuth4Required(obj ResponseAuth4) error {
+	return nil
+}
+
+// AssertResponseAuth4Constraints checks if the values respects the defined constraints
+func AssertResponseAuth4Constraints(obj ResponseAuth4) error {
+	return nil
+}
