# go/model_response_cookie.go
@@ -1,0 +1,32 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Flow Learning - OpenAPI 3.1
+ *
+ * api for flow learning
+ *
+ * API version: 1.0.0
+ * Contact: floTeam@gmail.com
+ */
+
+package openapi
+
+
+
+
+type ResponseCookie struct {
+
+	WAuthExp string `json:"w_authExp,omitempty"`
+
+	WAuth string `json:"w_auth,omitempty"`
+}
+
+// AssertResponseCookieRequired checks if the required fields are not zero-ed
+func AssertResponseCookieRequired(obj ResponseCookie) error {
+	return nil
+}
+
+// AssertResponseCookieConstraints checks if the values respects the defined constraints
+func AssertResponseCookieConstraints(obj ResponseCookie) error {
+	return nil
+}
